<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="74dp">

    <ImageView
        android:id="@+id/ownerIconView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@null"
        android:src="@drawable/jetbrains"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="240dp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_name_text"
        android:textColor="@color/on_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownerIconView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/languageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/default_language_text"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="156dp" />

    <Button
        android:id="@+id/starsButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_star"
        android:text="@string/star_count"
        app:layout_constraintEnd_toStartOf="@+id/centerGuid"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageView" />


    <Button
        android:id="@+id/watchersButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_watchers"
        android:text="@string/watcher_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/centerGuid"
        app:layout_constraintTop_toBottomOf="@+id/languageView" />


    <Button
        android:id="@+id/forksButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_forks"
        android:text="@string/forks_count"
        app:layout_constraintEnd_toStartOf="@+id/centerGuid"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starsButton" />

    <Button
        android:id="@+id/open_issue_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_issue"
        android:text="@string/open_issue_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/centerGuid"
        app:layout_constraintTop_toBottomOf="@+id/watchersButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
